Setup upload path

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://www.warbybarker.com/images/homepage_sub02.jpg" />
+    <link rel="icon" href="https://previews.123rf.com/images/arcady31/arcady311701/arcady31170100006/69326305-retro-eye-glasses-vector-icon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
